[package]
name = "aix8"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Your Name"]
description = "A production-grade, reliable file encryption CLI for Linux only, using XChaCha20-Poly1305 with streaming for large files."
license = "MIT"

[lib]
name = "aix8_lib"
path = "src/lib.rs"

[[bin]]
name = "aix8"
path = "src/bin/aix8.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libsodium-rs = "0.2"
argon2 = "0.5"
rpassword = "7.3"
anyhow = "1.0"

[dev-dependencies]
tempdir = "0.3"