[package]
name = "cc"
version = "0.1.0"
edition = "2024"
description = "Minimal file encryption app using Lockbox's proven crypto"
license = "MIT" # Inherited from original Lockbox

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = { version = "0.10.0", features = ["sys_rng"] }
rpassword = "7.4.0"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }