[package]
name = "cc"
version = "0.1.0"
edition = "2024"
description = "Minimal file encryption app using Lockbox's proven crypto"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
getrandom = "0.2"
rpassword = "7.4.0"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }
tempfile = "3.6"
clap = { version = "4.6", features = ["derive"] }
colored = "2.0"
ctrlc = "3.3"