[package]
name = "aicrypt"
version = "0.1.0"
edition = "2024"
description = "Minimal Linux-only file encryption CLI"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
getrandom = "0.2"
rpassword = "7.4.0"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }
tempfile = "3.6"
clap = { version = "4.6", features = ["derive"] }
colored = "2.0"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
[lib]
name = "aicrypt"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.6"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.7"
